force-app/main/default/objects/Lead_Reassignment_Queue__mdt/Lead_Reassignment_Queue__mdt.object-meta.xml
<CustomObject>
    <description>Used in Update_Lead_Owner_to_Queue &amp; Update_Account_Owner_to_Lead_Queue &amp; trigger LeadPreventOwnerChange to access Queue information.</description>
    <label>Lead Reassignment Queue</label>
    <pluralLabel>Lead Reassignment Queues</pluralLabel>
</CustomObject>