force-app/main/default/objects/Lead_Reassignment_Queue__mdt/fields/Queue_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Object_Type__c</fullName>
    <label>Queue Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>