force-app/main/default/objects/Lead_Reassignment_Queue__mdt/fields/Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Type__c</fullName>
    <label>Queue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Lead Queue</fullName>
                <default>true</default>
                <label>General Lead Queue</label>
            </value>
            <value>
                <fullName>Dead Leads Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>