force-app/main/default/objects/Lead_Reassignment_Queue__mdt/fields/Reassignment_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Queue_Name__c</fullName>
    <description>Used in Update_Lead_Owner_to_Queue</description>
    <inlineHelpText>Must match a Queue/User in Salesforce</inlineHelpText>
    <label>Reassignment Queue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>